--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ github_username:  praetoriansentry
 
 # Build settings
 markdown: kramdown
-theme: hacker
+theme: jekyll-theme-hacker
 plugins:
   - jekyll-feed
 
